[gd_scene load_steps=7 format=3 uid="uid://br8aaytuluka5"]

[ext_resource type="Script" path="res://ui/play_controls.gd" id="1_tj244"]
[ext_resource type="Texture2D" uid="uid://bnk26hbnbge1h" path="res://assets/button-ui/play_orange.tres" id="2_4nyx3"]
[ext_resource type="Texture2D" uid="uid://bs8veuec51qdc" path="res://assets/button-ui/restart_orange.tres" id="3_5l35u"]
[ext_resource type="Texture2D" uid="uid://dbiwhsh3kiyfl" path="res://assets/button-ui/pause_orange.tres" id="3_w27bm"]
[ext_resource type="Texture2D" uid="uid://bhc4hal417i44" path="res://assets/button-ui/empty_orange.tres" id="5_mupes"]
[ext_resource type="FontFile" uid="uid://bl7bojkfbuj0a" path="res://assets/fonts/arcade/retro-pixel-arcade.ttf" id="6_ibu8i"]

[node name="PlayControls" type="PanelContainer"]
process_mode = 3
script = ExtResource("1_tj244")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("2_4nyx3")
stretch_mode = 4

[node name="PauseButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_w27bm")
stretch_mode = 4

[node name="RestartButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_5l35u")
stretch_mode = 4

[node name="SpeedButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(54, 32)
layout_mode = 2
texture_normal = ExtResource("5_mupes")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/SpeedButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("6_ibu8i")
theme_override_font_sizes/font_size = 14
text = "1x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Confirm level restart"
initial_position = 1
ok_button_text = "Restart"
cancel_button_text = "Unpause"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="canceled" from="RestartDialog" to="." method="_on_restart_dialog_canceled"]
[connection signal="confirmed" from="RestartDialog" to="." method="_on_restart_dialog_confirmed"]
